fix: solving overflow problems

--- a/packages/components/src/components/dropdown-select-item/dropdown-select-item.css
+++ b/packages/components/src/components/dropdown-select-item/dropdown-select-item.css
@@ -12,5 +12,8 @@
 [part~='prefix'],
 [part~='label'],
 [part~='suffix'] {
-  display: flex;
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
